fix(admin): use spacing tokens instead of pixels

--- a/admin/app/styles/authenticated/certifications/index.scss
+++ b/admin/app/styles/authenticated/certifications/index.scss
@@ -4,5 +4,5 @@
   font-style: italic;
   text-align: center;
   background: var(--pix-neutral-0);
-  border-radius: 4px;
+  border-radius: var(--pix-spacing-1x);
 }
